--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 
-members = ["basics", "tokio-test", "libcrate-test", "bincrate-test"]
+members = ["basics", "tokio-test", "libcrate-test", "bincrate-test", "tui-test"]
